added some animation

--- a/fancyClock/views/fancyClock.html
+++ b/fancyClock/views/fancyClock.html
@@ -2,90 +2,52 @@
 <html>
 <head>
 	<title>Fancy Clock</title>
+	
 	<script type="text/javascript" src="../scripts/clock.js"></script>
 	<script type="text/javascript" src="../scripts/drawer.js"></script>
 	<script type="text/javascript" src="../scripts/point.js"></script>
+	<script type="text/javascript" src="../scripts/clockFace.js"></script>
+
 	<link rel="stylesheet" type="text/css" href="../css/clockDesign.css">
 	<script>
 		document.addEventListener("DOMContentLoaded", function() {
 			var canvas = document.getElementById('canvas'),
-				context = canvas.getContext('2d'),
-				PI2 = Math.PI*2;
-
-			function degToRad(degree) {
-				var factor = Math.PI / 180;
-				return degree * factor;
-			}
-
-			function getX(degree, radius) {
-				return radius*Math.sin(degToRad(degree));
-			}
-
-			function getY(degree, radius) {
-				return radius*Math.cos(degToRad(degree));
-			}
+				context = canvas.getContext('2d');
 
 			function clock() {
 				var	date = new Date();
 				Drawer.init(context);
 
+				//getting the smaller radius.
+				var radius = ( (canvas.height < canvas.width) ? (canvas.height/2)-25 : (canvas.width/2)-25 );
+
 				//background
 				context.rect(0, 0, canvas.width, canvas.height);
-				var grd = context.createRadialGradient(225,225,2, 225,225,180);
-				grd.addColorStop(0, "#181818");
-				grd.addColorStop(1, "#050505");
+				var grd = context.createRadialGradient(canvas.width/2, canvas.height/2, radius/100,
+													   canvas.width/2, canvas.height/2, radius);
+				grd.addColorStop(0, "#181828");
+				grd.addColorStop(1, "#050507");
 				
 				context.fillStyle = grd;
 				context.fill();
-				
-				//time lines
-				Drawer.setStrokeStyle(1, "#0a0a0a");
-
-				for(i = 0; i < 3; i++) {
-					Drawer.drawArc(canvas.width/2, canvas.height/2, 
-						( (canvas.height < canvas.width) ? (canvas.height/2)-25-(i*20) : (canvas.width/2)-25-(i*20) ),
-						359.99, context);
-				}
 
 				//clock face
-				var a,b;
-				var rad = ( (canvas.height < canvas.width) ? (canvas.height/2)-25 : (canvas.width/2)-25 );
-				var degree = 0;
-				
-				for(i = 0; i < 60; i++) {
-					if( i % 5 === 0 ) {
-						Drawer.setStrokeStyle(2, "#6f6f6f");
+				ClockFace.initDrawer(context);
+				ClockFace.printClockFace(radius, {x:canvas.width/2, y:canvas.height/2}, 10, 5, 20);
 
-						a = {	x:	Point.getXOnArc(rad + 10, degree, canvas.height/2),
-								y:  Point.getYOnArc(rad + 10, degree, canvas.height/2)};
-
-						b = { 	x:	Point.getXOnArc(rad - 10, degree, canvas.height/2),
-								y:  Point.getYOnArc(rad - 10, degree, canvas.height/2)}; 
-
-						Drawer.drawLine(a, b);
-						degree += 6;
-					} else {
-						Drawer.setStrokeStyle(1, "#6f6f6f");
-						
-						a = {	x:	Point.getXOnArc(rad + 5, degree, canvas.height/2),
-								y:  Point.getYOnArc(rad + 5, degree, canvas.height/2)};
-
-						b = { 	x:	Point.getXOnArc(rad - 5, degree, canvas.height/2),
-								y:  Point.getYOnArc(rad - 5, degree, canvas.height/2)};
-
-						degree += 6;
-
-						Drawer.drawLine(a, b);
-					}
-				}
-
-				Drawer.setStrokeStyle(1, "#6f6f6f");
-				Drawer.drawArc(225, 225, 200, Clock.getRealHours()*30);
-				Drawer.drawArc(225, 225, 180, Clock.getRealMinutes()*6);
-				Drawer.drawArc(225, 225, 160, Clock.getRealSeconds()*6);
+				Drawer.setStrokeStyle(2, "#6f6f6f");
+				Drawer.drawArcPart(canvas.width/2, canvas.height/2, radius, Clock.getRealHours()*30, 12.5);				
+				Drawer.drawArcPart(canvas.width/2, canvas.height/2, radius - 20, Clock.getRealMinutes()*6, 25);
+				Drawer.drawArcPart(canvas.width/2, canvas.height/2, radius - 40, Clock.getRealSeconds()*6, 50);
 	
 				Drawer.printString("20px verdana bold", "#707070", Clock.getDay(), 145, 212);
 				Drawer.printString("15px verdana", "#707070", Clock.getTime(), 145, 237);
+
+				Drawer.setStrokeStyle(2, "#000000");
+				Drawer.setFillStyle("#aa5500");
+				Drawer.drawFilledCircle(Point.getPointOnArc(radius, -(Clock.getRealHours()*30 + 180), 										canvas.width/2, canvas.height/2), 7);
+				Drawer.drawFilledCircle(Point.getPointOnArc(radius - 20, -(Clock.getRealMinutes()*6 + 180), 										canvas.width/2, canvas.height/2), 7);
+				Drawer.drawFilledCircle(Point.getPointOnArc(radius - 40, -(Clock.getRealSeconds()*6 + 180), 										canvas.width/2, canvas.height/2), 7);
 				
 			}
 			setInterval(clock, 1000/50);
